Added docker as .net core sdk

--- a/DemoDotNetCoreApplication/DemoDotNetCoreApplication.csproj
+++ b/DemoDotNetCoreApplication/DemoDotNetCoreApplication.csproj
@@ -7,6 +7,10 @@
     <UserSecretsId>e3ce09d4-56f0-4c8e-bacb-5ccbf25bf181</UserSecretsId>
     <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+    <RuntimeIdentifiers>win-x64</RuntimeIdentifiers>
+    <ContainerRuntimeIdentifier>win-x64</ContainerRuntimeIdentifier>
+    <ContainerBaseImage>mcr.microsoft.com/dotnet/aspnet:8.0-nanoserver-1809</ContainerBaseImage>
+    <EnableSdkContainerDebugging>True</EnableSdkContainerDebugging>
   </PropertyGroup>
 
   <ItemGroup>
@@ -23,6 +27,12 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ContainerEnvironmentVariable Include="ASPNETCORE_HTTPS_PORTS">
+      <Value>9081</Value>
+    </ContainerEnvironmentVariable>
   </ItemGroup>
 
 </Project>
