--- a/DemoDotNetCoreApplication/Properties/launchSettings.json
+++ b/DemoDotNetCoreApplication/Properties/launchSettings.json
@@ -38,6 +38,17 @@
       },
       "publishAllPorts": true,
       "useSSL": true
+    },
+    "Container (.NET SDK)": {
+      "commandName": "SdkContainer",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "environmentVariables": {
+        "ASPNETCORE_HTTPS_PORTS": "9081",
+        "ASPNETCORE_HTTP_PORTS": "9082"
+      },
+      "publishAllPorts": true,
+      "useSSL": true
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
