added eureka client

--- a/DemoDotNetCoreApplication/appsettings.json
+++ b/DemoDotNetCoreApplication/appsettings.json
@@ -3,13 +3,27 @@
   "ConnectionStrings": {
     "DefaultConnection": "server=L-IT-0089; database=Dcim_Dev;TrustServerCertificate=True;User Id=Nick;Password=nikhil;"
   },
-  
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
+
+  "eureka": {
+    "client": {
+      "serviceUrl": "http://localhost:8761/eureka/",
+      "shouldFetchRegistry": false,
+      "shouldRegisterWithEureka": true
+    
     },
-    "AllowedHosts": "*"
-  
+    "instance": {
+      "appName": "MyDotNetCoreApp",
+      "port": 9091,
+      "preferIpAddress": true
+    }
+  },
+
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
+
 }
