updated app config

--- a/DemoDotNetCoreApplication/appsettings.json
+++ b/DemoDotNetCoreApplication/appsettings.json
@@ -4,19 +4,25 @@
     "DefaultConnection": "server=L-IT-0089; database=Dcim_Dev;TrustServerCertificate=True;User Id=Nick;Password=nikhil;"
   },
 
-  "eureka": {
-    "client": {
-      "serviceUrl": "http://localhost:8761/eureka/",
-      "shouldFetchRegistry": false,
-      "shouldRegisterWithEureka": true
-    
+    "spring": {
+      "application": {
+        "name": "mydotnetcoreapp"
+      }
     },
-    "instance": {
-      "appName": "MyDotNetCoreApp",
-      "port": 9091,
-      "preferIpAddress": true
-    }
-  },
+    "eureka": {
+      "client": {
+        "serviceUrl": "http://localhost:8761/eureka/",
+        "shouldFetchRegistry": false,
+        "shouldRegisterWithEureka": true,
+        "validateCertificates": false
+
+      },
+      "instance": {
+        "appName": "mydotnetcoreapp",
+        "port": 9091,
+        "preferIpAddress": true
+      }
+    },
 
   "Logging": {
     "LogLevel": {
