--- a/DemoDotNetCoreApplication/appsettings.json
+++ b/DemoDotNetCoreApplication/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "DefaultConnection": "server=L-IT-0089; database=Dcim_Dev;TrustServerCertificate=True;User Id=Nick;Password=nikhil;"
+    "DefaultConnection": "server=L-IT-0249\\SQLEXPRESS; database=SMEConnect;TrustServerCertificate=True;User Id=Nikhil;Password=Nick@123;"
   },
 
   "Jwt": {
