added identity to backend

--- a/SMEConnectSignalRServer/appsettings.json
+++ b/SMEConnectSignalRServer/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com",
+    "ClientId": "5bfa2aed-bd36-44f2-a920-f0803d1f7b62",
+    "TenantId": "648ca8d9-38e9-44ca-bc27-20e5a79ee859",
+    "AllowWebApiToBeAuthorizedByACL": true
+  },
   "ConnectionStrings": {
     "SqlServerConnection": "server=L-IT-0249\\SQLEXPRESS; database=SMEConnect;TrustServerCertificate=True;User Id=Nikhil;Password=Nick@123;",
     "MongoDbConnection": "mongodb+srv://nikhilausekar888:UdGW7YBsLor9rptW@smeconnect.8vs6a.mongodb.net/?retryWrites=true&w=majority&appName=SMEConnect"
