--- a/SMEConnect/appsettings.json
+++ b/SMEConnect/appsettings.json
@@ -3,6 +3,8 @@
     "Instance": "https://login.microsoftonline.com",
     "ClientId": "5bfa2aed-bd36-44f2-a920-f0803d1f7b62",
     "TenantId": "648ca8d9-38e9-44ca-bc27-20e5a79ee859",
+    "Authority": "https://login.microsoftonline.com/{648ca8d9-38e9-44ca-bc27-20e5a79ee859}",
+    "Audience": "api://5bfa2aed-bd36-44f2-a920-f0803d1f7b62",
     "AllowWebApiToBeAuthorizedByACL": true
   },
   "ConnectionStrings": {
